feat(chat): direct/group chat, reply chat